--- a/styles/style.css
+++ b/styles/style.css
@@ -1,18 +1,20 @@
 body{
     font-family: sans-serif;
 }
-
-.btn-primary{
+/* blog button in navbar */
+.btn-blog{
     color: white;
     font-weight: bold;
-    background-color: rgb(13, 182, 182);
+    background-color: #1090D8;
+    ;
     border-radius: 5px;
     border: none;
     padding: 5px 20px;
 }
-.btn-primary:hover{
-    background-color: rgb(9, 107, 107);
+.btn-blog:hover{
+    background-color: #0874b3;
 }
+/* calculate button in main sections */
 .btn-calculate{
     color: white;
     font-size: 20px;
@@ -23,7 +25,7 @@ body{
     padding: 5px 50px;
 }
 .btn-calculate:hover{
-    background-color: rgb(9, 107, 107);
+    background-color: #0874b3;
 }
 
 ::placeholder{
@@ -42,10 +44,12 @@ p{
     width: 290px;
 }
 
+/* self made card for remembering old skills */
 .card-made{
-    width: 300px;
-    height: 400px;
-    box-shadow: 5px 5px 10px gray;
+    width: 290px;
+    height: 370px;
+    background-color: white;
+    box-shadow: 0px 0px 10px rgba(128, 128, 128, 0.5);
     border-radius: 10px;
 }
 .card-made img{
@@ -53,6 +57,11 @@ p{
     
     margin: 0px auto;
 }
+.card-made:hover{
+    background-color: #a5d7f5;
+}
+
+/* button made for table  */
 .btn-table{
     color: white;
     
@@ -63,5 +72,12 @@ p{
     padding: 5px 30px;
 }
 .btn-table:hover{
-    background-color: rgb(9, 107, 107);
+    background-color: #0874b3;
+}
+
+/* custumized border for table */
+.my-border{
+    /* border: 1px solid black; */
+    box-shadow: 0px 0px 5px rgba(128, 128, 128, 0.459);
+    border-radius: 10px;
 }
